--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -221,7 +221,7 @@ main {
   .tags {
     list-style: none;
     font-family: 'Baloo 2', cursive;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     margin: -1.75rem 0 1.2rem;
     li {
       display: inline;
@@ -229,14 +229,36 @@ main {
         box-shadow: none;
         padding: 0 2px;
         margin-right: 6px;
-        background-color: rgba(255, 255, 255, 0.685);
+        //background-color: rgba(255, 255, 255, 0.685);
         color: #10d8fc;
+        box-shadow: 0 1px 0 0 currentColor;
+    	transition: box-shadow ease-out 0.2s;
+    	&:hover {
+      		color: #22d8f8;
+      		box-shadow: 0 5px 0 0 currentColor;
+    	}
       }
     }
   }
   span img {
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
   }
+}
+
+.all-tags{
+    list-style: none;
+	box-shadow: none;
+    margin: -1.75rem 0 1.2rem;
+        padding: 0 2px;
+        margin-right: 6px;
+        //background-color: rgba(255, 255, 255, 0.685);
+        color: #10d8fc;
+        box-shadow: 0 1px 0 0 currentColor;
+    	transition: box-shadow ease-out 0.2s;
+    	&:hover {
+      		color: #22d8f8;
+      		box-shadow: 0 5px 0 0 currentColor;
+    	}
 }
 
 /**
@@ -399,4 +421,75 @@ pre[data-line] {
 .gatsby-highlight pre[class*="language-"] {
   float: left;
   min-width: 100%;
+}
+
+
+// CSS.gg icons for sun and moon
+.gg-sun {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 24px;
+  height: 24px;
+  background:
+    linear-gradient(to bottom,
+        currentColor 4px,transparent 0)
+        no-repeat 5px -6px/2px 6px,
+    linear-gradient(to bottom,
+        currentColor 4px,transparent 0)
+        no-repeat 5px 14px/2px 6px,
+    linear-gradient(to bottom,
+        currentColor 4px,transparent 0)
+        no-repeat -8px 5px/6px 2px,
+    linear-gradient(to bottom,
+        currentColor 4px,transparent 0)
+        no-repeat 14px 5px/6px 2px;
+  border-radius: 100px;
+  box-shadow: inset 0 0 0 2px;
+  border: 6px solid transparent
+}
+.gg-sun::after,
+.gg-sun::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 24px;
+  height: 2px;
+  border-right: 4px solid;
+  border-left: 4px solid;
+  left: -6px;
+  top: 5px
+}
+.gg-sun::before {
+  transform: rotate(-45deg)
+}
+.gg-sun::after {
+  transform: rotate(45deg)
+}
+.gg-moon,
+.gg-moon::after {
+    display: block;
+    box-sizing: border-box;
+    border-radius: 50%
+}
+.gg-moon {
+    overflow: hidden;
+    position: relative;
+    transform: rotate(-135deg) scale(var(--ggs,1));
+    width: 20px;
+    height: 20px;
+    border: 2px solid;
+    border-bottom-color: transparent
+}
+.gg-moon::after {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 18px;
+    border: 2px solid transparent;
+    box-shadow: 0 0 0 2px;
+    top: 8px;
+    left: 2px
 }
