--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: var(--bg);
+  font-family: 'Baloo 2', cursive;  
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -26,7 +27,7 @@ body.dark {
   --hr: hsla(0, 0%, 100%, 0.2);
   --inlineCode-bg: rgba(67, 97, 149, 0.5);
   --inlineCode-text: #e6e6e6;
-  --hover: #6179ff;
+  --hover: #05c3fd;
 }
 
 .container {
@@ -115,7 +116,8 @@ main {
 
 // Pages
 .page-title {
-  font-family: 'Baloo 2', cursive;  font-weight: 400;
+  font-family: 'Baloo 2', cursive;  
+  font-weight: 400;
   font-style: normal;
   font-size: 3rem;
 }
@@ -127,6 +129,7 @@ main {
   h2 {
     margin: 0;
     a {
+      font-family: 'Baloo 2', cursive;  
       background-image: linear-gradient(
         to bottom,
         transparent 65%,
@@ -144,9 +147,14 @@ main {
   small {
     color: #999;
     font-style: italic;
+    font-family: 'Baloo 2', cursive;  
   }
   h3 {
     margin: 0;
+    font-family: 'Baloo 2', cursive;  
+  }
+  p{
+  font-family: 'Baloo 2', cursive;  
   }
 }
 
@@ -159,7 +167,7 @@ main {
     float: right;
   }
   a {
-    color: #2afdda;
+    color: #2fe7ff;
     box-shadow: 0 1px 0 0 currentColor;
     transition: box-shadow ease-out 0.2s;
     &:hover {
@@ -197,7 +205,7 @@ main {
     font-family: 'Baloo 2', cursive;
     }
   h2 {
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin: 0;
     span {
       white-space: pre;
@@ -242,23 +250,31 @@ main {
   }
   span img {
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 18px;
+    margin-bottom: 36px;
+  }
+  img{
+  border-radius: 22px;
+  margin-bottom: 36px;
   }
 }
 
 .all-tags{
     list-style: none;
-	box-shadow: none;
+    box-shadow: none;
+    font-size: 1.2rem;
     margin: -1.75rem 0 1.2rem;
-        padding: 0 2px;
-        margin-right: 6px;
-        //background-color: rgba(255, 255, 255, 0.685);
-        color: #10d8fc;
-        box-shadow: 0 1px 0 0 currentColor;
-    	transition: box-shadow ease-out 0.2s;
-    	&:hover {
-      		color: #22d8f8;
-      		box-shadow: 0 5px 0 0 currentColor;
-    	}
+    padding: 0 2px;
+    margin-right: 6px;
+    margin-bottom: 36px;
+    //background-color: rgba(255, 255, 255, 0.685);
+    color: #10d8fc;
+    box-shadow: 0 1px 0 0 currentColor;
+    transition: box-shadow ease-out 0.2s;
+    &:hover {
+      color: #22d8f8;
+      box-shadow: 0 5px 0 0 currentColor;
+    }
 }
 
 /**
@@ -356,12 +372,12 @@ pre[class*="language-"] ::selection {
 }
 
 .token.punctuation {
-  color: rgb(199, 146, 234);
+  color: #05c3fd;
 }
 
 .token.selector,
 .token.doctype {
-  color: rgb(199, 146, 234);
+  color: #05c3fd;
   font-style: "italic";
 }
 
